# RU_HACK

./: .dockerignore  .gitignore  CLOUD_SETUP.md  LICENSE  README.md  __init__.py  get_webhook_response.py  pyproject.toml  requirements.txt  requirements_cloud.txt  show_webhook_response.py  terminal_webhook_viewer.py  user_data_export.json  watch_webhook.py
Frontend/: ARCHITECTURE.md  README.md  __init__.py  main.py  streamlit_app.py  user_data_export.json
Frontend/utils/: __init__.py  backend_integration.py  custom_multiselect.py  data_models.py  n8n_webhook_client.py  resume_processor.py  simple_multiselect.py  ui_components.py  validation.py
Resume_Parser/: firebase_config.py  gdrive_config.py  resume_parser.ipynb  resume_parser.py  setup.py
