[project]
name = "ru-hack"
version = "0.1.0"
description = "A Python project for Rutgers Hackathon"
authors = [
    {name = "Sarthak Chandervanshi",email = "54674615+SarthakChandervanshi@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "streamlit>=1.28.0",
    "pypdf>=3.0.0",
    "python-docx>=0.8.11"
]

[project.scripts]
ru-hack = "ru_hack.main:main"

[tool.poetry]
name = "ru-hack"
version = "0.1.0"
description = "A Python project for Rutgers Hackathon"
authors = ["Sarthak Chandervanshi <54674615+SarthakChandervanshi@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "ru_hack"}]

[tool.poetry.dependencies]
python = ">=3.12"
streamlit = "^1.28.0"
pypdf = "^3.0.0"
python-docx = "^0.8.11"

[tool.poetry.scripts]
ru-hack = "ru_hack.main:main"
frontend = "Frontend.main:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
black = "^23.0.0"
flake8 = "^6.0.0"
