[project]
name = "ru-hack"
version = "0.1.0"
description = ""
authors = [
    {name = "Sarthak Chandervanshi",email = "54674615+SarthakChandervanshi@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "pymupdf (>=1.26.4,<2.0.0)",
    "pdfplumber (>=0.11.7,<0.12.0)",
    "spacy (>=3.8.7,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
black = {extras = ["jupyter"], version = "^25.9.0"}
nbformat = "^5.10.4"

